--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -39,3 +39,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
