Jaeden-Darlon Merge 2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/EPOC_BP/EPOC_CONTENT/Blueprints/BP_EPOCMenuMode.BP_EPOCMenuMode_C
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
+GameInstanceClass=/Game/EPOC_BP/EPOC_CONTENT/Blueprints/BP_EPOCHGameInstance.BP_EPOCHGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
