--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -157,7 +157,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MenuDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Down)
 +ActionMappings=(ActionName="Escape",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="Escape",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
-+ActionMappings=(ActionName="Throw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Throw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Throw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +ActionMappings=(ActionName="restart",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="restart",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
