--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -43,4 +43,7 @@ ManualIPAddress=
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
 r.CustomDepth=3
+r.ReflectionMethod=1
+r.GenerateMeshDistanceFields=True
+r.DynamicGlobalIlluminationMethod=1
 
