Multiplayer bug fix
Fixed bug where players would be moved to the next player slot (PLayer 1 to player 2) after failing and retrying the level. Side note, unable to fix controls issue without heavy changes to how it is designed, so for now the players must press enter on a keyboard once they are on the main menu after a game over, unable to use controller to navigate it.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,3 +70,6 @@ PanningMethod=Linear
 MonoChannelUpmixMethod=Linear
 DialogueFilenameFormat="{DialogueGuid}_{ContextId}"
 
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=Default
+
